# bazel-js-testcase

./: .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json
a/: BUILD.bazel
a/src/: Bar.ts  index.ts
b/: BUILD.bazel
b/src/: index.ts
