package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
   name = "testws",
   data = [ ":testwsB" ],
   entry_point = "src/index.ts"
)

ts_library(
    name = "testwsB",
    module_name = "@testws/b",
    module_root = "src",
    srcs = glob(["src/**/*.ts"]),
    deps = [ 
        "@npm//@types/node",
        "//a:testwsA"
    ],
)
